[gd_scene load_steps=10 format=4 uid="uid://dhjyl2vv4fdm7"]

[ext_resource type="PackedScene" uid="uid://db088prasrhfn" path="res://src/scene/game/base/ship_scene.tscn" id="1_mxee0"]
[ext_resource type="PackedScene" uid="uid://bictjaq7mapmy" path="res://src/scene/teleporter.tscn" id="2_4l5ed"]
[ext_resource type="Texture2D" uid="uid://dyv1bet07j02m" path="res://asset/texture/prop/ship/chair.webp" id="2_4wohd"]
[ext_resource type="Script" uid="uid://bu8th2p7ojtjk" path="res://src/scene/game/scene_176.gd" id="2_qtwpq"]
[ext_resource type="PackedScene" uid="uid://dhp3xvkqaqrid" path="res://src/scene/entry_point.tscn" id="3_hmbm2"]
[ext_resource type="PackedScene" uid="uid://bkvgfktcyr1so" path="res://src/unit/save_point.tscn" id="3_qi1em"]
[ext_resource type="PackedScene" uid="uid://bbdh1te8u7b18" path="res://src/unit/character/npc/pineapple_bun.tscn" id="4_bfmwp"]
[ext_resource type="PackedScene" uid="uid://c8lburics1r5o" path="res://src/scene/game/base/container_image.tscn" id="4_dd1yu"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qtwpq"]
b = Vector2(0, -352)

[node name="Scene176" instance=ExtResource("1_mxee0")]
script = ExtResource("2_qtwpq")
scene_name = "SCENE_SHIP_DECK"
custom_explore = true

[node name="Tile" parent="Background/Prop" index="0"]
tile_map_data = PackedByteArray("AAAxABMABwALAAMAAAAxABIABwALAAIAAAAxABEABwALAAIAAAAxABAABwALAAIAAAAxAA8ABwALAAIAAAAxAA4ABwALAAIAAAAxAA0ABwALAAIAAAAxAAwABwALAAIAAAAxAAsABwALAAIAAAAxAAoABwALAAAAAAAwABMABwAJAAMAAAAwABIABwAJAAIAAAAwABEABwAJAAIAAAAwABAABwAKAAEAAAAwAA8ABwAJAAIAAAAwAA4ABwAJAAIAAAAwAA0ABwAKAAEAAAAwAAwABwAJAAIAAAAwAAsABwAKAAEAAAAwAAoABwAKAAAAAAAvABMABwAJAAMAAAAvABIABwAJAAIAAAAvABEABwAKAAEAAAAvABAABwAKAAEAAAAvAA8ABwAKAAEAAAAvAA4ABwAJAAIAAAAvAA0ABwAKAAEAAAAvAAwABwAJAAIAAAAvAAsABwAJAAIAAAAvAAoABwAKAAAAAAAuABMABwAJAAMAAAAuABIABwAKAAEAAAAuABEABwAKAAEAAAAuABAABwAJAAIAAAAuAA8ABwAJAAIAAAAuAA4ABwAJAAIAAAAuAA0ABwAJAAIAAAAuAAwABwAJAAIAAAAuAAsABwAKAAEAAAAuAAoABwAKAAAAAAAtABMABwAJAAMAAAAtABIABwAJAAIAAAAtABEABwAJAAIAAAAtABAABwAKAAEAAAAtAA8ABwAKAAEAAAAtAA4ABwAKAAEAAAAtAA0ABwAJAAIAAAAtAAwABwAJAAIAAAAtAAsABwAKAAEAAAAtAAoABwAKAAAAAAAsABMABwAIAAMAAAAsABIABwAIAAEAAAAsABEABwAIAAEAAAAsABAABwAIAAEAAAAsAA8ABwAIAAEAAAAsAA4ABwAIAAEAAAAsAA0ABwAIAAEAAAAsAAwABwAIAAEAAAAsAAsABwAIAAEAAAAsAAoABwAIAAAAAAA=")

[node name="Chair" type="Sprite2D" parent="Background/Prop" index="1"]
position = Vector2(64, 148)
texture = ExtResource("2_4wohd")

[node name="ContainerImage" parent="Background/Prop" index="2" instance=ExtResource("4_dd1yu")]
position = Vector2(176, 128)
frame = 4
container_color = 4

[node name="ContainerImage2" parent="Background/Prop" index="3" instance=ExtResource("4_dd1yu")]
position = Vector2(216, 128)
frame = 4
container_color = 4

[node name="ContainerImage3" parent="Background/Prop" index="4" instance=ExtResource("4_dd1yu")]
position = Vector2(256, 128)
frame = 4
container_color = 4

[node name="ContainerImage4" parent="Background/Prop" index="5" instance=ExtResource("4_dd1yu")]
position = Vector2(216, 80)
frame = 4
container_color = 4

[node name="ContainerImage5" parent="Background/Prop" index="6" instance=ExtResource("4_dd1yu")]
position = Vector2(256, 80)
frame = 4
container_color = 4

[node name="ContainerImage6" parent="Background/Prop" index="7" instance=ExtResource("4_dd1yu")]
position = Vector2(256, 32)
frame = 4
container_color = 4

[node name="GameTile" parent="." index="1"]
tile_map_data = PackedByteArray("AAD//xsAEAAKAAEAAAD//xoAEAAJAAIAAAD//xkAEAAKAAEAAAD//xgAEAAJAAIAAAD//xcAEAAJAAIAAAD//xYAEAAKAAEAAAD//xUAEAAJAAIAAAD//xQAEAAJAAIAAAD//xMAEAAKAAAAAAD+/xsAEAAIAAEAAAD+/xoAEAAIAAEAAAD+/xkAEAAIAAEAAAD+/xgAEAAIAAEAAAD+/xcAEAAIAAEAAAD+/xYAEAAIAAEAAAD+/xUAEAAIAAEAAAD+/xQAEAAIAAEAAAD+/xMAEAAFAAAAAAAUABsAEAAJAAIAAAAUABkAEAAJAAIAAAAUABgAEAAJAAIAAAAUABcAEAAKAAEAAAAUABYAEAAKAAEAAAAUABUAEAAJAAIAAAAUABQAEAAJAAIAAAATABsAEAAKAAEAAAATABkAEAAKAAEAAAATABgAEAAJAAIAAAATABcAEAAJAAIAAAATABYAEAAJAAIAAAATABUAEAAKAAEAAAATABQAEAAJAAIAAAASABsAEAAJAAIAAAASABkAEAAJAAIAAAASABgAEAAKAAEAAAASABcAEAAKAAEAAAASABYAEAAKAAEAAAASABUAEAAKAAEAAAASABQAEAAJAAIAAAARABsAEAAJAAIAAAARABkAEAAKAAEAAAARABgAEAAJAAIAAAARABcAEAAKAAEAAAARABYAEAAKAAEAAAARABUAEAAJAAIAAAARABQAEAAJAAIAAAAQABsAEAAKAAEAAAAQABkAEAAJAAIAAAAQABgAEAAKAAEAAAAQABcAEAAKAAEAAAAQABYAEAAJAAIAAAAQABUAEAAJAAIAAAAQABQAEAAJAAIAAAAPABsAEAAJAAIAAAAPABkAEAAKAAEAAAAPABgAEAAJAAIAAAAPABcAEAAJAAIAAAAPABYAEAAJAAIAAAAPABUAEAAKAAEAAAAPABQAEAAKAAEAAAAOABsAEAAJAAIAAAAOABkAEAAKAAEAAAAOABgAEAAJAAIAAAAOABcAEAAKAAEAAAAOABYAEAAJAAIAAAAOABUAEAAJAAIAAAAOABQAEAAKAAEAAAANABsAEAAJAAIAAAANABkAEAAKAAEAAAANABgAEAAKAAEAAAANABcAEAAJAAIAAAANABYAEAAKAAEAAAANABUAEAAJAAIAAAANABQAEAAKAAEAAAAUABwAEAAJAAMAAAATABwAEAAJAAMAAAASABwAEAAJAAMAAAARABwAEAAJAAMAAAAQABwAEAAJAAMAAAAPABwAEAAJAAMAAAAOABwAEAAJAAMAAAANABwAEAAJAAMAAAD//xwAEAAJAAMAAAD+/xwAEAAIAAMAAAD8/xMAEAABAAIAAAD9/xMAEAACAAMAAAD8//P/EAAAAAIAAAD8//T/EAAAAAIAAAD8//X/EAAAAAIAAAD8//b/EAAAAAIAAAD8//f/EAAAAAIAAAD8//j/EAAAAAIAAAD8//n/EAAAAAIAAAD8//r/EAAAAAIAAAD8//v/EAAAAAIAAAD8//z/EAAAAAIAAAD8//3/EAAAAAIAAAD8//7/EAAAAAIAAAD8////EAAAAAIAAAD8/wAAEAAAAAIAAAD8/wEAEAAAAAIAAAD8/wIAEAAAAAIAAAD8/wMAEAAAAAIAAAD8/wQAEAAAAAIAAAD8/wUAEAAAAAIAAAD8/wYAEAAAAAIAAAD8/wcAEAAAAAIAAAD8/wgAEAAAAAIAAAD8/wkAEAAAAAIAAAD8/woAEAAAAAIAAAD8/wsAEAAAAAIAAAD8/wwAEAAAAAIAAAD8/w0AEAAAAAIAAAD8/w4AEAAAAAIAAAD8/w8AEAAAAAIAAAD8/xAAEAAAAAIAAAD8/xEAEAAAAAIAAAD8/xIAEAAAAAIAAAD8//L/EAAAAAIAAAD8//H/EAAAAAIAAAD8//D/EAAAAAIAAAD8/+//EAAAAAIAAAD8/+7/EAAAAAIAAAD8/+3/EAAAAAIAAAD8/+z/EAAAAAIAAAD8/+v/EAAAAAIAAAD8/+r/EAAAAAIAAAD8/+n/EAAAAAIAAAD8/+j/EAAAAAIAAAD8/+f/EAAAAAIAAAD8/+b/EAABAAAAAAD//+b/EAACAAMAAAD+/+b/EAACAAMAAAD9/+b/EAACAAMAAAAAAOb/EAACAAMAAAAAABMAEAAKAAAAAAAAABQAEAAKAAEAAAAAABUAEAAKAAEAAAAAABYAEAAJAAIAAAAAABcAEAAKAAEAAAAAABgAEAAJAAIAAAAAABkAEAAJAAIAAAAAABoAEAAJAAIAAAAAABsAEAAJAAIAAAAAABwAEAAJAAMAAAABAOb/EAACAAMAAAABABMAEAAKAAAAAAABABQAEAAJAAIAAAABABUAEAAKAAEAAAABABYAEAAJAAIAAAABABcAEAAJAAIAAAABABgAEAAJAAIAAAABABkAEAAKAAEAAAABABoAEAAKAAEAAAABABsAEAAKAAEAAAABABwAEAAJAAMAAAACAOb/EAACAAMAAAACABMAEAAKAAAAAAACABQAEAAJAAIAAAACABUAEAAJAAIAAAACABYAEAAJAAIAAAACABcAEAAKAAEAAAACABgAEAAJAAIAAAACABkAEAAJAAIAAAACABoAEAAKAAEAAAACABsAEAAJAAIAAAACABwAEAAJAAMAAAADAOb/EAACAAMAAAADABMAEAAKAAAAAAADABQAEAAKAAEAAAADABUAEAAJAAIAAAADABYAEAAJAAIAAAADABcAEAAJAAIAAAADABgAEAAKAAEAAAADABkAEAAKAAEAAAADABoAEAAJAAIAAAADABsAEAAJAAIAAAADABwAEAAJAAMAAAAEAOb/EAACAAMAAAAEABMAEAAKAAAAAAAEABQAEAAJAAIAAAAEABUAEAAJAAIAAAAEABYAEAAJAAIAAAAEABcAEAAKAAEAAAAEABgAEAAKAAEAAAAEABkAEAAJAAIAAAAEABoAEAAJAAIAAAAEABsAEAAKAAEAAAAEABwAEAAJAAMAAAAFAOb/EAACAAMAAAAFABMAEAAKAAAAAAAFABQAEAAJAAIAAAAFABUAEAAJAAIAAAAFABYAEAAKAAEAAAAFABcAEAAKAAEAAAAFABgAEAAJAAIAAAAFABkAEAAJAAIAAAAFABoAEAAJAAIAAAAFABsAEAAKAAEAAAAFABwAEAAJAAMAAAAGAOb/EAACAAMAAAAGABMAEAAKAAAAAAAGABQAEAAJAAIAAAAGABUAEAAJAAIAAAAGABYAEAAKAAEAAAAGABcAEAAJAAIAAAAGABgAEAAKAAEAAAAGABkAEAAJAAIAAAAGABoAEAAKAAEAAAAGABsAEAAJAAIAAAAGABwAEAAJAAMAAAAHAOb/EAACAAMAAAAHABMAEAAKAAAAAAAHABQAEAAJAAIAAAAHABUAEAAKAAEAAAAHABYAEAAJAAIAAAAHABcAEAAJAAIAAAAHABgAEAAJAAIAAAAHABkAEAAJAAIAAAAHABoAEAAKAAEAAAAHABsAEAAJAAIAAAAHABwAEAAJAAMAAAAIAOb/EAACAAMAAAAIABMAEAAKAAAAAAAIABoAEAAKAAEAAAAJAOb/EAACAAMAAAAJABMAEAAKAAAAAAAJABoAEAAKAAEAAAAKAOb/EAACAAMAAAAKABMAEAAKAAAAAAAKABoAEAAJAAIAAAALAOb/EAACAAMAAAALABMAEAAKAAAAAAALABoAEAAKAAEAAAAMAOb/EAACAAMAAAAMABMAEAAKAAAAAAAMABoAEAAJAAIAAAANAOb/EAACAAMAAAANABMAEAAKAAAAAAANABoAEAAKAAEAAAAOAOb/EAACAAMAAAAOABMAEAAKAAAAAAAOABoAEAAJAAIAAAAPAOb/EAACAAMAAAAPABMAEAAKAAAAAAAPABoAEAAKAAEAAAAQAOb/EAACAAMAAAAQABMAEAAKAAAAAAAQABoAEAAKAAEAAAARAOb/EAACAAMAAAARABMAEAAKAAAAAAARABoAEAAJAAIAAAASAOb/EAACAAMAAAASABMAEAAKAAAAAAASABoAEAAKAAEAAAATAOb/EAACAAMAAAATABMAEAAKAAAAAAATABoAEAAKAAEAAAAUAOb/EAACAAMAAAAUABMAEAAKAAAAAAAUABoAEAAJAAIAAAAVAOb/EAACAAMAAAAVABMAEAAKAAAAAAAVABQAEAAKAAEAAAAVABUAEAAJAAIAAAAVABYAEAAKAAEAAAAVABcAEAAJAAIAAAAVABgAEAAKAAEAAAAVABkAEAAJAAIAAAAVABoAEAAKAAEAAAAVABsAEAAJAAIAAAAVABwAEAAJAAMAAAAWAOb/EAACAAMAAAAWABMAEAAKAAAAAAAWABQAEAAKAAEAAAAWABUAEAAJAAIAAAAWABYAEAAJAAIAAAAWABcAEAAKAAEAAAAWABgAEAAJAAIAAAAWABkAEAAKAAEAAAAWABoAEAAJAAIAAAAWABsAEAAKAAEAAAAWABwAEAAJAAMAAAAXAOb/EAACAAMAAAAXABMAEAAKAAAAAAAXABQAEAAJAAIAAAAXABUAEAAJAAIAAAAXABYAEAAKAAEAAAAXABcAEAAKAAEAAAAXABgAEAAKAAEAAAAXABkAEAAJAAIAAAAXABoAEAAKAAEAAAAXABsAEAAKAAEAAAAXABwAEAAJAAMAAAAYAOb/EAACAAMAAAAYABMAEAAKAAAAAAAYABQAEAAKAAEAAAAYABUAEAAJAAIAAAAYABYAEAAJAAIAAAAYABcAEAAKAAEAAAAYABgAEAAJAAIAAAAYABkAEAAJAAIAAAAYABoAEAAKAAEAAAAYABsAEAAJAAIAAAAYABwAEAAJAAMAAAAZAOb/EAACAAMAAAAZABMAEAAKAAAAAAAZABQAEAAJAAIAAAAZABUAEAAJAAIAAAAZABYAEAAJAAIAAAAZABcAEAAJAAIAAAAZABgAEAAJAAIAAAAZABkAEAAJAAIAAAAZABoAEAAKAAEAAAAZABsAEAAKAAEAAAAZABwAEAAJAAMAAAAaAOb/EAACAAMAAAAaABMAEAAKAAAAAAAaABQAEAAJAAIAAAAaABUAEAAJAAIAAAAaABYAEAAKAAEAAAAaABcAEAAKAAEAAAAaABgAEAAJAAIAAAAaABkAEAAKAAEAAAAaABoAEAAJAAIAAAAaABsAEAAJAAIAAAAaABwAEAAJAAMAAAAbAOb/EAACAAMAAAAbABMAEAAKAAAAAAAbABQAEAAJAAIAAAAbABUAEAAJAAIAAAAbABYAEAAJAAIAAAAbABcAEAAKAAEAAAAbABgAEAAJAAIAAAAbABkAEAAKAAEAAAAbABoAEAAJAAIAAAAbABsAEAAKAAEAAAAbABwAEAAJAAMAAAAcAOb/EAACAAMAAAAcABMAEAAKAAAAAAAcABQAEAAJAAIAAAAcABUAEAAKAAEAAAAcABYAEAAJAAIAAAAcABcAEAAKAAEAAAAcABgAEAAKAAEAAAAcABkAEAAKAAEAAAAcABoAEAAKAAEAAAAcABsAEAAJAAIAAAAcABwAEAAJAAMAAAAdAOb/EAACAAMAAAAdABMAEAAKAAAAAAAdABQAEAAKAAEAAAAdABUAEAAJAAIAAAAdABYAEAAKAAEAAAAdABcAEAAKAAEAAAAdABgAEAAKAAEAAAAdABkAEAAKAAEAAAAdABoAEAAKAAEAAAAdABsAEAAKAAEAAAAdABwAEAAJAAMAAAAeAOb/EAACAAMAAAAeABMAEAAKAAAAAAAeABQAEAAKAAEAAAAeABUAEAAKAAEAAAAeABYAEAAKAAEAAAAeABcAEAAKAAEAAAAeABgAEAAJAAIAAAAeABkAEAAKAAEAAAAeABoAEAAJAAIAAAAeABsAEAAJAAIAAAAeABwAEAAJAAMAAAAfAOb/EAACAAMAAAAfABMAEAAKAAAAAAAfABQAEAAKAAEAAAAfABUAEAAJAAIAAAAfABYAEAAJAAIAAAAfABcAEAAJAAIAAAAfABgAEAAJAAIAAAAfABkAEAAJAAIAAAAfABoAEAAJAAIAAAAfABsAEAAJAAIAAAAfABwAEAAJAAMAAAAgAOb/EAACAAMAAAAgABMAEAAKAAAAAAAgABQAEAAKAAEAAAAgABUAEAAJAAIAAAAgABYAEAAJAAIAAAAgABcAEAAKAAEAAAAgABgAEAAKAAEAAAAgABkAEAAKAAEAAAAgABoAEAAJAAIAAAAgABsAEAAJAAIAAAAgABwAEAAJAAMAAAAhAOb/EAACAAMAAAAhABMAEAAKAAAAAAAhABQAEAAJAAIAAAAhABUAEAAKAAEAAAAhABYAEAAKAAEAAAAhABcAEAAJAAIAAAAhABgAEAAKAAEAAAAhABkAEAAKAAEAAAAhABoAEAAKAAEAAAAhABsAEAAJAAIAAAAhABwAEAAJAAMAAAAiAOb/EAACAAMAAAAiABMAEAAKAAAAAAAiABQAEAAKAAEAAAAiABUAEAAJAAIAAAAiABYAEAAJAAIAAAAiABcAEAAKAAEAAAAiABgAEAAJAAIAAAAiABkAEAAKAAEAAAAiABoAEAAKAAEAAAAiABsAEAAJAAIAAAAiABwAEAAJAAMAAAAjAOb/EAACAAMAAAAjABMAEAAKAAAAAAAjABQAEAAJAAIAAAAjABUAEAAJAAIAAAAjABYAEAAKAAEAAAAjABcAEAAJAAIAAAAjABgAEAAJAAIAAAAjABkAEAAKAAEAAAAjABoAEAAKAAEAAAAjABsAEAAKAAEAAAAjABwAEAAJAAMAAAAkAOb/EAACAAMAAAAkABMAEAAKAAAAAAAkABQAEAAKAAEAAAAkABUAEAAJAAIAAAAkABYAEAAKAAEAAAAkABcAEAAKAAEAAAAkABgAEAAKAAEAAAAkABkAEAAJAAIAAAAkABoAEAAJAAIAAAAkABsAEAAKAAEAAAAkABwAEAAJAAMAAAAlAOb/EAACAAMAAAAlABMAEAAKAAAAAAAlABQAEAAKAAEAAAAlABUAEAAJAAIAAAAlABYAEAAJAAIAAAAlABcAEAAJAAIAAAAlABgAEAAJAAIAAAAlABkAEAAJAAIAAAAlABoAEAAKAAEAAAAlABsAEAAKAAEAAAAlABwAEAAJAAMAAAAmAOb/EAACAAMAAAAmABMAEAAKAAAAAAAmABQAEAAJAAIAAAAmABUAEAAJAAIAAAAmABYAEAAKAAEAAAAmABcAEAAJAAIAAAAmABgAEAAJAAIAAAAmABkAEAAKAAEAAAAmABoAEAAJAAIAAAAmABsAEAAJAAIAAAAmABwAEAAJAAMAAAAnAOb/EAACAAMAAAAnABMAEAALAAAAAAAnABQAEAALAAIAAAAnABUAEAALAAIAAAAnABYAEAALAAIAAAAnABcAEAALAAIAAAAnABgAEAALAAIAAAAnABkAEAALAAIAAAAnABoAEAALAAIAAAAnABsAEAALAAIAAAAnABwAEAALAAMAAAAoAOb/EAACAAMAAAAoABMAEgAIAAAAAAAoABQAEgAIAAEAAAAoABUAEgAIAAEAAAAoABYAEgAIAAEAAAAoABcAEgAIAAEAAAAoABgAEgAIAAEAAAAoABkAEgAIAAEAAAAoABoAEgAIAAEAAAAoABsAEgAIAAEAAAAoABwAEgAIAAMAAAApAOb/EAACAAMAAAApABMAEgAKAAAAAAApABQAEgAKAAEAAAApABUAEgAKAAEAAAApABYAEgAKAAEAAAApABcAEgAJAAIAAAApABgAEgAJAAIAAAApABkAEgAKAAEAAAApABoAEgAJAAIAAAApABsAEgAJAAIAAAApABwAEgAJAAMAAAAqAOb/EAACAAMAAAAqABMAEgAKAAAAAAAqABQAEgAKAAEAAAAqABUAEgAJAAIAAAAqABYAEgAJAAIAAAAqABcAEgAJAAIAAAAqABgAEgAJAAIAAAAqABkAEgAJAAIAAAAqABoAEgAKAAEAAAAqABsAEgAKAAEAAAAqABwAEgAJAAMAAAArAOb/EAADAAMAAAArABMAEgAKAAAAAAArABQAEgAKAAEAAAArABUAEgAKAAEAAAArABYAEgAKAAEAAAArABcAEgAJAAIAAAArABgAEgAKAAEAAAArABkAEgAJAAIAAAArABoAEgAJAAIAAAArABsAEgAKAAEAAAArABwAEgAJAAMAAAAsAOb/EgAAAAEAAAAsABMAEgAKAAAAAAAsABQAEgAKAAEAAAAsABUAEgAKAAEAAAAsABYAEgAKAAEAAAAsABcAEgAJAAIAAAAsABgAEgAKAAEAAAAsABkAEgAKAAEAAAAsABoAEgAKAAEAAAAsABsAEgAJAAIAAAAsABwAEgAJAAMAAAAtABMAEgAKAAAAAAAtABQAEgAJAAIAAAAtABUAEgAJAAIAAAAtABYAEgAJAAIAAAAtABcAEgAKAAEAAAAtABgAEgAKAAEAAAAtABkAEgAKAAEAAAAtABoAEgAKAAEAAAAtABsAEgAJAAIAAAAtABwAEgAJAAMAAAAuABMAEgAKAAAAAAAuABQAEgAKAAEAAAAuABUAEgAKAAEAAAAuABYAEgAJAAIAAAAuABcAEgAKAAEAAAAuABgAEgAKAAEAAAAuABkAEgAJAAIAAAAuABoAEgAKAAEAAAAuABsAEgAKAAEAAAAuABwAEgAJAAMAAAAvABMAEgAKAAAAAAAvABQAEgAJAAIAAAAvABUAEgAKAAEAAAAvABYAEgAKAAEAAAAvABcAEgAJAAIAAAAvABgAEgAJAAIAAAAvABkAEgAJAAIAAAAvABoAEgAJAAIAAAAvABsAEgAJAAIAAAAvABwAEgAJAAMAAAAwABMAEgAKAAAAAAAwABQAEgAKAAEAAAAwABUAEgAJAAIAAAAwABYAEgAKAAEAAAAwABcAEgAKAAEAAAAwABgAEgAKAAEAAAAwABkAEgAJAAIAAAAwABoAEgAJAAIAAAAwABsAEgAKAAEAAAAwABwAEgAJAAMAAAAxABMAEgAGAAAAAAAxABQAEgALAAIAAAAxABUAEgALAAIAAAAxABYAEgALAAIAAAAxABcAEgALAAIAAAAxABgAEgALAAIAAAAxABkAEgALAAIAAAAxABoAEgALAAIAAAAxABsAEgALAAIAAAAxABwAEgALAAMAAAAIABQAEAAKAAEAAAAIABUAEAAKAAEAAAAIABYAEAAKAAEAAAAIABcAEAAJAAIAAAAIABgAEAAKAAEAAAAIABkAEAAJAAIAAAAIABsAEAAJAAIAAAAIABwAEAAJAAMAAAAJABQAEAAJAAIAAAAJABUAEAAKAAEAAAAJABYAEAAKAAEAAAAJABcAEAAKAAEAAAAJABgAEAAJAAIAAAAJABkAEAAJAAIAAAAJABsAEAAJAAIAAAAJABwAEAAJAAMAAAAKABQAEAAKAAEAAAAKABUAEAAJAAIAAAAKABYAEAAJAAIAAAAKABcAEAAJAAIAAAAKABgAEAAJAAIAAAAKABkAEAAKAAEAAAAKABsAEAAJAAIAAAAKABwAEAAJAAMAAAALABQAEAAJAAIAAAALABUAEAAJAAIAAAALABYAEAAKAAEAAAALABcAEAAJAAIAAAALABgAEAAJAAIAAAALABkAEAAKAAEAAAALABsAEAAKAAEAAAALABwAEAAJAAMAAAAMABQAEAAKAAEAAAAMABUAEAAKAAEAAAAMABYAEAAJAAIAAAAMABcAEAAJAAIAAAAMABgAEAAKAAEAAAAMABkAEAAKAAEAAAAMABsAEAAKAAEAAAAMABwAEAAJAAMAAAAxAAoAEgAGAAMAAAAxAAkAEgALAAIAAAAxAAgAEgALAAIAAAAxAAcAEgALAAIAAAAxAAYAEgALAAIAAAAxAAUAEgALAAIAAAAxAAQAEgALAAIAAAAxAAMAEgALAAIAAAAxAAIAEgALAAIAAAAxAAEAEgALAAIAAAAxAAAAEgALAAIAAAAxAP//EgALAAIAAAAxAP7/EgALAAAAAAAwAAoAEgAJAAMAAAAwAAkAEgAKAAEAAAAwAAgAEgAKAAEAAAAwAAcAEgAKAAEAAAAwAAYAEgAJAAIAAAAwAAUAEgAKAAEAAAAwAAQAEgAKAAEAAAAwAAMAEgAKAAEAAAAwAAIAEgAKAAEAAAAwAAEAEgAKAAEAAAAwAAAAEgAKAAEAAAAwAP//EgAJAAIAAAAwAP7/EgAKAAAAAAAvAAoAEgAJAAMAAAAvAAkAEgAKAAEAAAAvAAgAEgAKAAEAAAAvAAcAEgAJAAIAAAAvAAYAEgAKAAEAAAAvAAUAEgAKAAEAAAAvAAQAEgAJAAIAAAAvAAMAEgAJAAIAAAAvAAIAEgAJAAIAAAAvAAEAEgAKAAEAAAAvAAAAEgAKAAEAAAAvAP//EgAJAAIAAAAvAP7/EgAKAAAAAAAuAAoAEgAJAAMAAAAuAAkAEgAJAAIAAAAuAAgAEgAKAAEAAAAuAAcAEgAKAAEAAAAuAAYAEgAKAAEAAAAuAAUAEgAKAAEAAAAuAAQAEgAKAAEAAAAuAAMAEgAKAAEAAAAuAAIAEgAKAAEAAAAuAAEAEgAJAAIAAAAuAAAAEgAJAAIAAAAuAP//EgAKAAEAAAAuAP7/EgAKAAAAAAAtAAoAEgAJAAMAAAAtAAkAEgAKAAEAAAAtAAgAEgAJAAIAAAAtAAcAEgAKAAEAAAAtAAYAEgAKAAEAAAAtAAUAEgAJAAIAAAAtAAQAEgAKAAEAAAAtAAMAEgAKAAEAAAAtAAIAEgAJAAIAAAAtAAEAEgAKAAEAAAAtAAAAEgAJAAIAAAAtAP//EgAJAAIAAAAtAP7/EgAKAAAAAAAsAAoAEgAIAAMAAAAsAAkAEgAIAAEAAAAsAAgAEgAIAAEAAAAsAAcAEgAIAAEAAAAsAAYAEgAIAAEAAAAsAAUAEgAIAAEAAAAsAAQAEgAIAAEAAAAsAAMAEgAIAAEAAAAsAAIAEgAIAAEAAAAsAAEAEgAIAAEAAAAsAAAAEgAIAAEAAAAsAP//EgAIAAEAAAAsAP7/EgAEAAEAAAAsAOf/EgAAAAIAAAAsAOj/EgAAAAIAAAAsAOn/EgAAAAIAAAAsAOr/EgAAAAIAAAAsAOv/EgAAAAIAAAAsAOz/EgAAAAIAAAAsAO3/EgAAAAIAAAAsAO7/EgAAAAIAAAAsAO//EgAAAAIAAAAsAPD/EgAAAAIAAAAsAPH/EgAAAAIAAAAsAPL/EgAAAAIAAAAsAPP/EgAAAAIAAAAsAPT/EgAAAAIAAAAsAPX/EgAAAAIAAAAsAPb/EgAAAAIAAAAsAPf/EgAAAAIAAAAsAPj/EgAAAAIAAAAsAPn/EgAAAAIAAAAsAPr/EgAAAAIAAAAsAPv/EgAAAAIAAAAsAPz/EgAAAAIAAAAsAP3/EgAAAAIAAAAzAAoAEgADAAAAAAAyAAoAEgACAAMAAAAzABMAEgADAAIAAAAzABIAEgAAAAIAAAAzABEAEgAAAAIAAAAzABAAEgAAAAIAAAAzAA8AEgAAAAIAAAAzAA4AEgAAAAIAAAAzAA0AEgAAAAIAAAAzAAwAEgAAAAIAAAAzAAsAEgAAAAIAAAAyABMAEgACAAMAAAA=")

[node name="PlayerChecker" type="Area2D" parent="Units" index="0"]
position = Vector2(192, 152)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Units/PlayerChecker" index="0"]
shape = SubResource("SegmentShape2D_qtwpq")

[node name="SavePoint" parent="Units" index="1" instance=ExtResource("3_qi1em")]
position = Vector2(64, 152)

[node name="PineappleBun" parent="Units" index="2" instance=ExtResource("4_bfmwp")]
position = Vector2(256, 152)
direction = 1

[node name="Player" parent="." index="3"]
position = Vector2(128, 152)

[node name="GameCamera" parent="." index="4"]
position = Vector2(128, 152)

[node name="LTeleporter" parent="Entrances" index="0" instance=ExtResource("2_4l5ed")]
position = Vector2(-16, 0)
target_scene = 175
target_entry_point = 4

[node name="EntryPoint" parent="Entrances/LTeleporter" index="2" instance=ExtResource("3_hmbm2")]
position = Vector2(16, 152)

[node name="RTeleporter" parent="Entrances" index="1" instance=ExtResource("2_4l5ed")]
position = Vector2(400, 0)
target_scene = 177

[node name="EntryPoint" parent="Entrances/RTeleporter" index="2" instance=ExtResource("3_hmbm2")]
position = Vector2(-32, 152)
location = 4

[connection signal="body_entered" from="Units/PlayerChecker" to="." method="_on_player_checker_body_entered"]
[connection signal="updated" from="Units/PineappleBun" to="." method="_on_pineapple_bun_updated"]
